[add] exception handler